--- a/package.xml
+++ b/package.xml
@@ -14,26 +14,20 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>trajectory_execution_msgs</build_depend>
+  <build_depend>trajectory_custom_msgs</build_depend>
   <build_depend>trajectory_process_utils_srvs</build_depend>
-<!--   <build_depend>actionlib</build_depend>
-  <build_depend>actionlib_msgs</build_depend> -->
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>trajectory_execution_msgs</build_export_depend>
+  <build_export_depend>trajectory_custom_msgs</build_export_depend>
   <build_export_depend>trajectory_process_utils_srvs</build_export_depend>
-<!--   <build_export_depend>actionlib</build_export_depend>
-  <build_export_depend>actionlib_msgs</build_export_depend> -->
 
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>trajectory_execution_msgs</exec_depend>
+  <exec_depend>trajectory_custom_msgs</exec_depend>
   <exec_depend>trajectory_process_utils_srvs</exec_depend>
-<!--   <exec_depend>actionlib</exec_depend>
-  <exec_depend>actionlib_msgs</exec_depend> -->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
